# tc_save_editor

./: .gitignore  Cargo.toml  bacon.toml  pnpm-lock.yaml  rustfmt.toml
lib/tc_save_parser/: Cargo.toml
lib/tc_save_parser/src/: kind.rs  lib.rs  shared.rs
lib/tc_save_parser/src/versions/: v7.rs  v8.rs  v9.rs
lib/tc_save_parser_macros/: Cargo.toml
lib/tc_save_parser_macros/src/: lib.rs
src/: lib.rs  main.rs  tceditor.rs
src/tc/: mod.rs
src/tc/versions/: kind.rs  mod.rs  shared.rs  v7.rs  v8.rs
